# hexapod-simulator

./: README.md  main.py  pyproject.toml  server.py
config/: hexapod.yaml
config/calibration/: ds3235ssg.csv  ds3235ssg.yaml
config/servos/: ds3235ssg.yaml  mg996r.yaml
firmware/servo2040/: CMakeLists.txt  README.md  flash.sh  main.cpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: controls.js  hexapod.js  hud.js  main.js  scene.js  ws.js
frontend_v2/: index.html  index.html.1  package.json  svelte.config.js  vite.config.js
frontend_v2/public/: manifest.webmanifest
frontend_v2/src/: App.svelte  app.css
frontend_v2/src/components/: Ahi.svelte  Battery.svelte  Camera.svelte  Compass.svelte  EStop.svelte  Help.svelte  Hud.svelte  InfoBar.svelte  Joystick.svelte  Minimap.svelte  Panel.svelte  Scene.svelte  ServoGraphs.svelte  Sparklines.svelte  TouchControls.svelte
frontend_v2/src/lib/: cameras.js  chase.js  gamepad.js  gyro.js  hexapod.js  input.js  metrics.js  overlays.js  persist.js  presets.js  scene.js  screenshot.js  ui.js  ws.js
scripts/: hold_zero.py  run_server.sh
src/hexapod/: __init__.py  robot.py
src/hexapod/api/: __init__.py  dto.py
src/hexapod/controllers/: __init__.py  base.py  twist.py
src/hexapod/core/: __init__.py  angle.py  config.py  enums.py  hexapod.py  legs.py  pose.py
src/hexapod/core/gait/: __init__.py  base.py  tripod.py
src/hexapod/core/kinematics/: __init__.py  transforms.py
src/hexapod/core/kinematics/fk/: __init__.py  coxa.py  femur.py  tibia.py
src/hexapod/core/kinematics/ik/: __init__.py  coxa.py  femur.py  tibia.py
src/hexapod/core/leg/: __init__.py  coxa.py  femur.py  leg.py  tibia.py
src/hexapod/drivers/: __init__.py  base.py  serial.py  sim.py
src/hexapod/drivers/servo/: __init__.py  calibration.py  mapping.py  profile.py  protocol.py
src/hexapod/transports/: __init__.py  camera.py  mdns.py  static.py  websocket.py
src/hexapod/viz/: __init__.py  matplotlib.py
tests/: conftest.py
tests/integration/: test_robot.py
tests/unit/api/: test_dto.py
tests/unit/core/: test_angle.py  test_config.py  test_pose.py
tests/unit/core/gait/: test_tripod.py
tests/unit/core/kinematics/: test_ik.py
tests/unit/drivers/: test_serial.py  test_sim.py
tests/unit/drivers/servo/: test_calibration.py  test_mapping.py  test_profile.py  test_protocol.py
