[project]
name = "inverse-kinematics-hexapod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20260408",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hexapod"]

[tool.pyright]
extraPaths = ["src"]

[project.optional-dependencies]
hardware = [
    "pyserial>=3.5",
]
gui = [
    "matplotlib>=3.10.8",
    "pyqt6>=6.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

