[project]
name = "inverse-kinematics-hexapod"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20260408",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hexapod"]

[tool.pyright]
extraPaths = ["src"]

[project.optional-dependencies]
hardware = [
    "pyserial>=3.5",
]
# Matplotlib viewer — desktop only (needs a GUI backend). For Pi / headless
# use the web frontend (server.py) instead.
viz = [
    "matplotlib>=3.10.8",
]
camera = [
    "opencv-python-headless>=4.8",
]
mdns = [
    "zeroconf>=0.140",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

